@@ -19,3 +19,13 @@ ignore = t/author-*
 ignore = t/release-*
 ignore = xt/**/*
 argv = --profile=$ROOT/perltidyrc
+
+[Test::Vars]
+select = **/*.{pl,pm,t,psgi}
+ignore = .build/**/*
+ignore = Dist-Zilla-PluginBundle-DROLSKY-*/**/*
+ignore = blib/**/*
+ignore = t/00-*
+ignore = t/author-*
+ignore = t/release-*
+ignore = xt/**/*
